# docsync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  VOICE.md  codecov.yml  demo.sh  mkdocs.yml  pyproject.toml  test_cache.sh  test_cache2.sh  test_new_commands.sh
.docsync/: links.toml
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  contributing.md  getting-started.md  index.md  skills.md
docs/cli/: reference.md
scripts/: create_testbed.sh
src/docsync/: cache.py  cli.py  coverage.py  graph.py  hook.py  reviewed.py  staleness.py  toml_links.py
src/menard/: brevity.py  cache.py  cli.py  staleness.py  symbols.py
src/menard/skills/: audit.md  compress.md
tests/: test_auto_generated.py  test_brevity.py  test_cache.py  test_cli.py  test_cli_fix.py  test_cli_simple.py  test_coverage.py  test_donttouch.py  test_graph.py  test_hook.py  test_hook_simple.py  test_integration.py  test_integration_toml.py  test_reviewed.py  test_sections.py  test_staleness.py  test_toml_links.py
