[project]
name = "docsync"
version = "0.1.0"
description = "Pre-commit hook enforcing documentation freshness via code-doc dependency graphs"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.scripts]
docsync = "docsync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["docsync"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]


[tool.docsync]
mode = "block"
transitive_depth = 1
enforce_symmetry = true
require_links = []
exempt = []
doc_paths = ["docs/**/*.md", "README.md"]
